홈페이지수정

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <div class="container">
         <h1>Home page</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates natus magni, aliquam facere ullam quidem animi atque velit dolorem, obcaecati id non provident mollitia, maiores sit quod saepe incidunt error.</p>
+
+        <hr>
+
+        <a href="info.html">자기소개</a>
     </div>
 </body>
 </html>
